# ContraFlow

./: .env  .env.development  .env.docker  .env.example  .env.production  .env.staging  .env.test  .gitignore  Makefile  README.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
.claude/: settings.json
.claude/skills/update-readme/: SKILL.md
alembic/: env.py
alembic/versions/: 061817173790_initial.py  23c5b9d75e7f_initial.py  2d81be9cc4c8_initial.py  59cb2fdcde6b_add_encrypted_agent_private_key_.py  8827fb96b216_add_permissions_and_role_permissions_.py
docker/: Dockerfile  docker-compose.yml
src/: config.py  main.py
src/application/dtos/: auth_dtos.py
src/application/ports/: password_hasher.py  token_service.py
src/application/services/: copy_trading.py
src/application/use_cases/: add_master_wallet.py  complete_agent_wallet.py  get_agent_wallets.py  get_wallet_info.py  initiate_agent_wallet.py  login_user.py  manage_api_keys.py  register_user.py  wallet_challenge.py  wallet_verify.py
src/domain/: enums.py
src/domain/constants/: hyperliquid_signing.py
src/domain/entities/: account.py  asset.py  copy_strategy.py  cross_asset_trigger.py  fill.py  order.py  permission.py  role.py  user.py  wallet.py
src/domain/repositories/: account_repository.py  api_key_repository.py  asset_repository.py  copy_strategy_repository.py  cross_asset_trigger_repository.py  fill_repository.py  order_repository.py  role_repository.py  user_repository.py  (+1 more)
tests/smoke/: conftest.py  test_api_key.py  test_auth.py
(+56 files in other folders)
