[project]
name = "contraflow"
version = "0.1.0"
description = "FastAPI microservice with DDD architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "celery[redis]>=5.4.0",
    "redis>=4.2.0,<5.0.0",
    "fastapi-cache2[redis]>=0.2.2",
    "jinja2>=3.1.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.9",
    "hyperliquid-python-sdk>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-env>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
env = [
    "ENVIRONMENT=test",
    "DATABASE_URL=postgresql+asyncpg://admin:admin123@localhost:5432/contraflow_test",
    "REDIS_URL=redis://localhost:6379/1",
    "SECRET_KEY=test-secret-key-not-for-production",
    "API_KEY_SECRET=test-api-key-secret",
]

[tool.ruff]
line-length = 100
target-version = "py312"
